Migrate Spring Batch Core to JUnit Jupiter